[AB-xxx] changing the structure of starboard post model